fix: export file layout + popup spacing

--- a/JobFairApplication/src/app/back-office/export-files/export-files.page.scss
+++ b/JobFairApplication/src/app/back-office/export-files/export-files.page.scss
@@ -39,3 +39,10 @@ img.title-img {
     }
 
 }
+
+.ion-align-items-center {
+    margin: 0;
+    position: relative;
+    top: 40%;
+    transform: translate(0, 50%);
+}
